--- a/cheesedark.css
+++ b/cheesedark.css
@@ -1,8 +1,11 @@
 /**
  * @name DarkCheese
- * @description Thanks to @refact0r for midnight as this is based on it.
- * @author WeAreCheese (idk19_2981)
+ * @description Thanks to @refact0r for Midnight as this is based on it.
+ * @author WeAreCheese
  * @version 2.0.0
+ * @invite auWTyz8NTd
+ * @
+ * @source https://github.com/Gbxw222/darkcheesetheme
  */
 
 @import url('https://refact0r.github.io/midnight-discord/build/midnight.css'); /* Custom styling based on Midnight */
@@ -19,6 +22,8 @@ body {
     --custom-window-controls: on;
     --window-control-size: 14px;
     --dms-icon: on;
+    --dms-icon-svg-url: url('https://files.catbox.moe/u3ohtx.svg');
+    --dms-icon-svg-size: 90%;
     --dms-icon-color-before: var(--icon-secondary);
     --dms-icon-color-after: var(--white);
     --dms-background: off;
@@ -31,50 +36,42 @@ body {
     --small-user-panel: off;
 }
 
-/* Custom DMs Icon */
-.dm-icon {
-    background-image: url('https://files.catbox.moe/u3ohtx.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 30px;
-    height: 30px;
-}
-
 :root {
     --colors: on;
-    --text-0: hsl(220, 12%, 50%); /* Darker text */
-    --text-1: hsl(220, 15%, 45%);
-    --text-2: hsl(220, 17%, 40%);
-    --text-3: hsl(220, 18%, 35%);
-    --text-4: hsl(220, 20%, 25%);
-    --text-5: hsl(220, 22%, 20%);
+    --text-0: hsl(220, 12%, 92%);
+    --text-1: hsl(220, 15%, 85%);
+    --text-2: hsl(220, 17%, 75%);
+    --text-3: hsl(220, 18%, 65%);
+    --text-4: hsl(220, 20%, 50%);
+    --text-5: hsl(220, 22%, 38%);
 
-    --bg-1: hsl(220, 8%, 10%); /* Darker background */
+    --bg-1: hsl(220, 8%, 10%);
     --bg-2: hsl(220, 7%, 8%);
     --bg-3: hsl(220, 6%, 6%);
     --bg-4: hsl(220, 5%, 4%);
-    --hover: hsl(220, 10%, 15%, 0.1);
-    --active: hsl(220, 12%, 18%, 0.2);
-    --active-2: hsl(220, 15%, 20%, 0.3);
-    --message-hover: hsl(220, 5%, 4%, 0.1);
+    --hover: hsl(220, 10%, 20%, 0.1);
+    --active: hsl(220, 12%, 25%, 0.2);
+    --active-2: hsl(220, 15%, 30%, 0.3);
+    --message-hover: hsl(220, 5%, 6%, 0.1);
 
-    --accent-1: hsl(220, 30%, 40%); /* Darker accents */
-    --accent-2: hsl(220, 28%, 35%);
-    --accent-3: hsl(220, 25%, 30%);
-    --accent-4: hsl(220, 22%, 25%);
-    --accent-5: hsl(220, 20%, 20%);
-    --mention: linear-gradient(to right, hsl(220, 25%, 15%) 40%, transparent);
-    --mention-hover: linear-gradient(to right, hsl(220, 22%, 12%) 40%, transparent);
-    --reply: linear-gradient(to right, hsl(220, 15%, 25%) 40%, transparent);
-    --reply-hover: linear-gradient(to right, hsl(220, 12%, 22%) 40%, transparent);
+    --accent-1: hsl(220, 30%, 60%);
+    --accent-2: hsl(220, 28%, 50%);
+    --accent-3: hsl(220, 25%, 42%);
+    --accent-4: hsl(220, 22%, 36%);
+    --accent-5: hsl(220, 20%, 30%);
+    --mention: linear-gradient(to right, hsl(220, 25%, 28%) 40%, transparent);
+    --mention-hover: linear-gradient(to right, hsl(220, 22%, 25%) 40%, transparent);
+    --reply: linear-gradient(to right, hsl(220, 15%, 40%) 40%, transparent);
+    --reply-hover: linear-gradient(to right, hsl(220, 12%, 38%) 40%, transparent);
 
-    --online: hsl(140, 50%, 25%); /* Darker online color */
-    --dnd: hsl(0, 55%, 30%);
-    --idle: hsl(40, 50%, 35%);
-    --streaming: hsl(270, 45%, 30%);
-    --offline: hsl(220, 10%, 15%);
+    --online: hsl(140, 50%, 35%);
+    --dnd: hsl(0, 55%, 40%);
+    --idle: hsl(40, 50%, 45%);
+    --streaming: hsl(270, 45%, 35%);
+    --offline: hsl(220, 10%, 30%);
 
-    --border-light: hsl(220, 15%, 25%, 0.1);
-    --border: hsl(220, 18%, 25%, 0.2);
+    --border-light: hsl(220, 15%, 32%, 0.1);
+    --border: hsl(220, 18%, 32%, 0.2);
     --button-border: hsl(0, 0%, 100%, 0.1);
 }
+
