--- a/cheesedark.css
+++ b/cheesedark.css
@@ -4,7 +4,7 @@
  * @author WeAreCheese
  * @version 2.0.0
  * @invite auWTyz8NTd
- * @
+ * @website https://github.com/Gbxw222/darkcheesetheme/blob/main/cheesedark.css
  * @source https://github.com/Gbxw222/darkcheesetheme
  */
 
